# investments

./: .gitignore  pyproject.toml
investments/: currency.py  defaults.py  dividend.py  exceptions.py  google_api.py  interests.py  ticker.py  trade.py  trades_fifo.py
investments/data_providers/: cbr.py  exchange_provider.py  hmrc.py
investments/ibtax/: ibtax.py  report_presenter.py
investments/report_parsers/: ib.py  open_fr.py
tests/: currency_test.py
tests/data_providers/: cbr_test.py
tests/ibtax/: prepare_fees_report_test.py
tests/report_parsers/: ib_test.py
